Fixed menu buttons being too big on medium screens

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -564,8 +564,12 @@ button:disabled {
     .menu {
       width: 100%;
       height: 10%;
-      flex-direction: row; } }
+      flex-direction: row;
+      justify-content: space-around; } }
   .menu__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 40%;
     padding: 1.65rem;
     margin: 2.2rem;
@@ -579,7 +583,10 @@ button:disabled {
     text-decoration: none; }
     @media only screen and (min-width: 56.25em) {
       .menu__link {
-        width: 30%;
+        width: 25%;
+        height: 60%;
+        padding: 0.55rem 1.65rem;
+        margin: 0;
         font-size: 1.5rem; } }
 
 .search {
